feat: geo-payments, seguridad base y nuevas APIs

--- a/src/content/events/2025-09-21-turquia-7-iglesias.mdx
+++ b/src/content/events/2025-09-21-turquia-7-iglesias.mdx
@@ -8,6 +8,8 @@ category: "peregrinacion"
 excerpt: "Crucero por el Egeo y recorrido completo por las Iglesias del Apocalipsis."
 image: "/hero.jpg"
 ctaLabel: "Quiero apoyar/inscribirme"
-ctaUrl: "https://devocionalmana.com"
+ctaUrl: "https://www.ministeriomana.org/eventos/turquia-7-iglesias"
+altCtaLabel: "Donar internacional (Stripe)"
+altCtaUrl: "https://www.ministeriomana.org/donaciones?ref=event-turquia-2025"
 ---
 **Incluye:** vuelos y traslados, hoteles 5★ (hotel cueva en Capadocia), alimentación completa, crucero por las islas griegas, guías expertos y acompañamiento espiritual.
