--- a/src/content/events/2025-10-21-israel-peregrinacion.mdx
+++ b/src/content/events/2025-10-21-israel-peregrinacion.mdx
@@ -8,6 +8,8 @@ category: "peregrinacion"
 excerpt: "12 días todo incluido. Devocionales diarios y recorrido bíblico por Tierra Santa."
 image: "/hero.jpg"
 ctaLabel: "Quiero apoyar/inscribirme"
-ctaUrl: "https://devocionalmana.com"
+ctaUrl: "https://www.ministeriomana.org/eventos/israel-2025"
+altCtaLabel: "Donar internacional (Stripe)"
+altCtaUrl: "https://www.ministeriomana.org/donaciones?ref=event-israel-2025"
 ---
 **Itinerario resumido:** llegada a Tel Aviv; Galilea (Meguido, Cesarea Marítima, Nazaret, Cana); Río Jordán (bautismos); Mar de Galilea; Qumrán; Masada; Jerusalén (Monte de los Olivos, Getsemaní, Muro de los Lamentos); Museo del Holocausto; Tumba Vacía.
