--- a/src/content/events/2025-12-06-adornadas.mdx
+++ b/src/content/events/2025-12-06-adornadas.mdx
@@ -8,6 +8,8 @@ category: "mujeres"
 excerpt: "Un encuentro para redescubrir el diseño divino y la libertad en Cristo."
 image: "/hero.jpg"
 ctaLabel: "Quiero participar"
-ctaUrl: "https://example.com/adornadas"
+ctaUrl: "https://www.ministeriomana.org/eventos/adornadas-2025"
+altCtaLabel: "Inscribirme internacional (USD)"
+altCtaUrl: "https://www.ministeriomana.org/donaciones?ref=event-adornadas-2025"
 ---
 Oración, enseñanza bíblica, comunión y restauración.
