Mejora directorio de iglesias y evangeliza map

--- a/src/content/events/2025-09-21-turquia-7-iglesias.mdx
+++ b/src/content/events/2025-09-21-turquia-7-iglesias.mdx
@@ -1,15 +1,22 @@
-
 ---
-title: "Peregrinación Turquía & Islas Griegas — Las 7 Iglesias"
-startDate: 2025-09-21
-endDate: 2025-10-04
-location: "Estambul • Kuşadası • Patmos • Rodas • Creta • Santorini • Éfeso • Sardes • Filadelfia • Pamukkale • Capadocia"
+title: "Turquía · Peregrinación a las 7 Iglesias del Apocalipsis 2025"
+slug: "turquia-7-iglesias-2025"
+date: "2025-09-21"
 category: "peregrinacion"
-excerpt: "Crucero por el Egeo y recorrido completo por las Iglesias del Apocalipsis."
-image: "/hero.jpg"
-ctaLabel: "Quiero apoyar/inscribirme"
-ctaUrl: "https://www.ministeriomana.org/eventos/turquia-7-iglesias"
-altCtaLabel: "Donar internacional (Stripe)"
-altCtaUrl: "https://www.ministeriomana.org/donaciones?ref=event-turquia-2025"
+location: "Turquía"
+summary: "Recorrido por las 7 iglesias del Apocalipsis, conectando historia, Biblia y misión actual."
+heroImage: "/images/events/turquia-7-iglesias-2025-cover.jpg"
+brochurePdf: "/brochures/turquia-7-iglesias-2025.pdf"
+highlight: true
 ---
-**Incluye:** vuelos y traslados, hoteles 5★ (hotel cueva en Capadocia), alimentación completa, crucero por las islas griegas, guías expertos y acompañamiento espiritual.
+
+## Turquía · 7 Iglesias del Apocalipsis 2025
+
+Un viaje para profundizar en el mensaje de las cartas a las siete iglesias del Apocalipsis
+y ver cómo esos mensajes siguen siendo actuales para la iglesia de hoy.
+
+- Visita guiada a cada ciudad
+- Enseñanza bíblica aplicada
+- Momentos de oración y comunión
+
+Para más información: [administracion@ministeriomana.org](mailto:administracion@ministeriomana.org).
