--- a/src/content/events/2025-10-21-israel-peregrinacion.mdx
+++ b/src/content/events/2025-10-21-israel-peregrinacion.mdx
@@ -1,15 +1,22 @@
-
 ---
-title: "Peregrinación a Israel — Tierra Santa"
-startDate: 2025-10-21
-endDate: 2025-11-01
-location: "Tel Aviv • Galilea • Mar Muerto • Masada • Jerusalén"
+title: "Peregrinación a Israel 2025"
+slug: "peregrinacion-israel-2025"
+date: "2025-10-21"
 category: "peregrinacion"
-excerpt: "12 días todo incluido. Devocionales diarios y recorrido bíblico por Tierra Santa."
-image: "/hero.jpg"
-ctaLabel: "Quiero apoyar/inscribirme"
-ctaUrl: "https://www.ministeriomana.org/eventos/israel-2025"
-altCtaLabel: "Donar internacional (Stripe)"
-altCtaUrl: "https://www.ministeriomana.org/donaciones?ref=event-israel-2025"
+location: "Israel"
+summary: "Viaje de fe por lugares bíblicos en Israel junto al equipo del Ministerio Maná."
+heroImage: "/images/events/israel-2025-cover.jpg"       # luego ponemos la imagen real
+brochurePdf: "/brochures/israel-2025.pdf"                # luego subimos el PDF real
+highlight: true
 ---
-**Itinerario resumido:** llegada a Tel Aviv; Galilea (Meguido, Cesarea Marítima, Nazaret, Cana); Río Jordán (bautismos); Mar de Galilea; Qumrán; Masada; Jerusalén (Monte de los Olivos, Getsemaní, Muro de los Lamentos); Museo del Holocausto; Tumba Vacía.
+
+## Peregrinación a Israel 2025
+
+Esta peregrinación está pensada como un tiempo de **formación bíblica** y **renovación espiritual** visitando
+los lugares donde Jesús caminó y donde ocurrieron muchos de los relatos que estudiamos cada día en el Devocional Maná.
+
+- Enseñanza bíblica en cada lugar
+- Tiempo de oración y adoración
+- Acompañamiento pastoral durante todo el viaje
+
+Si quieres más información, escribe a [administracion@ministeriomana.org](mailto:administracion@ministeriomana.org).
