--- a/src/content/news/2025-10-campus-socios.mdx
+++ b/src/content/news/2025-10-campus-socios.mdx
@@ -1,9 +1,10 @@
 ---
 title: "Campus Maná: únete como Socio de la Gran Comisión"
-excerpt: "Cuatro jóvenes misioneros sirven en universidades de Colombia y Latinoamérica. Conoce sus historias y apóyalos con una donación periódica."
+slug: "campus-socios-2025"
 date: "2025-10-20"
-tags: ["campus","misiones"]
-cover: "/images/news/campus-socios.jpg"
+summary: "Cuatro jóvenes misioneros sirven en universidades de Colombia y Latinoamérica. Conoce sus historias y apóyalos con una donación periódica."
+image: "/images/news/campus-socios.jpg"
+category: "campus"
 ---
 
 ¿Ya conoces a nuestros misioneros de Campus Maná? **Ariel, Amaury, Leidy y Rocío** comparten el evangelio en las universidades. Puedes apadrinar a uno de ellos con una donación mensual desde Colombia (Wompi) o desde el exterior (Stripe).
